test/integration/rstanarm/parameters/pretty.expected
  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format parameters_assoc.stan

Syntax error in 'parameters_assoc.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[a_K] a_z_beta; // primitive assoc params
                 ^
     2:  
     3:    // parameters for priors on assoc params
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format parameters_betareg.stan

Syntax error in 'parameters_betareg.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[prior_dist_z == 7 ? sum(num_normals_z) : z_dim] z_omega; // betareg z variable coefficients
                 ^
     2:    real<lower=(link_phi <= 1 ? negative_infinity() : 0)> gamma_z[has_intercept_z];  // betareg intercept
     3:    real<lower=0> global_z[hs_z];
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format parameters_event.stan

Syntax error in 'parameters_event.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real e_gamma[e_has_intercept]; // intercept for event submodel
               ^
     2:    vector[e_K] e_z_beta;          // primitive log hazard ratios
     3:  
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format parameters_glm.stan

Syntax error in 'parameters_glm.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[prior_dist == 7 ? sum(num_normals) : K] z_beta;
                 ^
     2:    vector[K_smooth] z_beta_smooth;
     3:    vector<lower=0>[K_smooth > 0 ? smooth_map[K_smooth] : 0] smooth_sd_raw;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format parameters_mvmer.stan

Syntax error in 'parameters_mvmer.stan', line 2, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    // intercepts
     2:    real<lower=lb(intercept_type[1]),upper=ub(intercept_type[1])>
               ^
     3:      yGamma1[intercept_type[1] > 0];
     4:    real<lower=lb(intercept_type[2]),upper=ub(intercept_type[2])>
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


